# azure-services-tests

./: .gitignore  pyproject.toml
.harness/: Build_sanket_qp_azure_services_tests_1706741944031-pr-trigger-input-set-1706741944877.yaml  Build_sanket_qp_azure_services_tests_1706741944031-push-trigger-input-set-1706741945870.yaml
.harness/pipelines/: azure-services-tests-1706741940126.yaml
postgres-flex/: README.md  clear_data.sql  common.py  config.py  conftest.py  delete_permissions.sql  load_data.sql  pg_database.py  pytest.ini  test_postgres.py  test_postgres_encryption.py  test_postgres_engine.py  test_strings.py
postgres-flex/sql/: create_database.sql  create_permissions.sql  create_tables.sql  create_user_roles.sql  create_users_and_database.sql  delete_database.sql  delete_tables.sql  delete_user_roles.sql  grant_permissions.sql  script1_old.sql  script2_old.sql
